syntax = "proto3";

package v1.users;

option go_package = "gophKeeper/protobuf/V1/users";

enum Platform {
  UNKNOWN = 0;
  WINDOWS = 1;
  LINUX = 2;
  MACOS = 3;
}

message UserRegistrationRequest {
  string login = 1;
  string password = 2;
  string otp = 3;
  Platform platform = 5;  // определение платформы
}

message UserRegistrationResponse {
  bool success = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
}

service UserService {
  rpc Registration(UserRegistrationRequest) returns (UserRegistrationResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}